@@ -29,5 +29,39 @@ Dentre nossos planos, estão dentro a criação e desenvolvimento de um sistema 
 
 * Casos de Uso: A usabilidade do nosso projeto cabe, principalmente, para o cliente que deseja comprar os materiais de construção apropriados para determinada área, priorizando sempre a maior emonomia possível. Com o usuário oferencendo as medidas essenciais para o cálculo da área ou região que deva ser construída ou reformada, o próprio sistema do aplicativo irá realizar os cálculos para o fornecimento dos produtos.
 
-# Documentação 
+# Documentação
+**1°Etapa: Baixe as blibiotecas:** 
+
+ Links para as blibiotecas: JavaFX: https://gluonhq.com/products/javafx/
+ 
+                            Database(ORMlite):
+                            
+**2°Etapa: abrir o projeto na IDE**
+
+![abrir projeto na IDE](https://github.com/user-attachments/assets/62fd671e-21fb-48d0-b1d8-0022eb8e36b9)
+
+**3-Etapa: após abrir o código vá na imagem do documento do projeto do código e abra as opções dele, procure por open module-settings**
+
+![abrirconfigurracoes doa rquivo](https://github.com/user-attachments/assets/c3c27197-5b1b-4c88-94df-59ed2821b27b)
+
+**4° Etapa: vá a opção libraries e clique para adicione as blibiotecas à IDE, no Intellij basta colocar o caminho do arquivo onde estão as blibiotecas**
+
+![adicionar libraries](https://github.com/user-attachments/assets/c20b7307-08e6-453d-b15b-903abd90639f)
+
+![adicionar lib 2](https://github.com/user-attachments/assets/ecfb9aac-3562-4e44-926b-b1241abbdb2a)
+
+**5° Etapa: Após adicionar as blibiotecas deve se configurar as classes, para isso deve se clicar em cada classe view para abrir as opções e clique na opção **"Modify Run Configuration"**, no nosso projeto as classes view estão descritas como os seguintes exemplos:**
+ ![Captura de Tela (148)](https://github.com/user-attachments/assets/a94e1e08-d9f2-4c03-8548-6baa82782a64)
+
+ ![config clsses](https://github.com/user-attachments/assets/3314b01a-2056-4e27-acc6-f055503198f2)
+ 
+**6° etapa: No Intellij após isso dentro desta tela vá até **"Modify options"** e escolha a opção **"Add VM options"** e após isso na caixa VM options adicione --module-path "caminho usado anteriormente das bibliotecas" --add-modules javafx.controls,javafx.fxml
+e aplique, repita isso para todas as classes views do projeto.**
+![add VM op](https://github.com/user-attachments/assets/4d72c076-f5dd-498c-8f5b-edb331567cb3)
+
+![caminhofinal](https://github.com/user-attachments/assets/f90fa74c-7fdd-4d4e-96cd-08a3b57c95ae)
+
+**7° Etapa:Para que o código rode a aplicação vá até a Classe view "Inicio" e de run nela, assim a aplicação vai rodar**
+
+
 
